--- a/aurora_village/src/styles/Map.css
+++ b/aurora_village/src/styles/Map.css
@@ -1,11 +1,11 @@
 .mapa {
   float: left;
   width: 100%;
-  margin: 35px 0;
+  margin: 20px 0;
 }
 
 .mapa iframe {
-  width: 100%;
+  width: 95%;
   height: 400px;
-  border: none;
+  border: 1px solid rgb(194, 194, 194);
 }
