--- a/aurora_village/src/styles/App.css
+++ b/aurora_village/src/styles/App.css
@@ -167,15 +167,45 @@ textarea {
 
 footer {
   background-color: rgb(0, 0, 0);
+  max-width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-footer span {
-  color: white;
-}
-
 .contato-footer {
   display: flex;
-  border: 1px solid white;
+  flex-direction: column;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+
+.div-footer {
+  width: 100%;
+}
+
+.font-white {
+  color: white;
+  font-weight: bold;
+  margin: 10px 0 10px 0;
+}
+
+.direitos-reservados {
+  text-align: center;
+}
+
+@media only screen and (min-width: 769px) {
+  header {
+    align-items: center;
+  }
+
+  header nav {
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
+  }
+
+  .video-section {
+    margin-top: 50px;
+  }
 }
