--- a/aurora_village/src/styles/App.css
+++ b/aurora_village/src/styles/App.css
@@ -25,6 +25,7 @@ header img {
 
 header nav {
   display: none;
+  font-weight: 600;
 }
 
 header nav a {
@@ -35,7 +36,9 @@ header nav a {
 }
 
 header nav a:hover {
-  font-size: 1.1rem;
+  text-decoration: underline;
+  text-decoration-color: green;
+  text-decoration-thickness: 2px;
 }
 
 .video-section {
@@ -218,4 +221,8 @@ footer {
     margin-top: 30px;
     margin-bottom: 30px;
   }
+}
+
+html {
+  scroll-behavior: smooth;
 }
